--- a/architect_module/src/main/resources/templates/index.html
+++ b/architect_module/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Автоматзация миграция БД</title>
+    <title>Автоматизация миграции БД</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
@@ -174,45 +174,166 @@
     <div class="col-md-8 offset-md-2">
         <div class="card shadow-sm p-4 rounded-lg">
             <h5 class="card-title text-center mb-4">Создайте новый скрипт для миграции БД</h5>
-            <form method="post" th:action="@{/automation}">
+            <form id="migrationForm" onsubmit="prepareData(event)">
                 <div class="form-group mb-3">
                     <select id="selectBox" class="form-select form-select-sm mb-3" name="tableName"
-                    onchange="document.getElementById('textInput').style.display = this.value === 'other' ? 'block' : 'none';">
+                            onchange="handleTableSelection(this)">
                         <option selected>Выберите таблицу или введите название новой</option>
                         <option th:each="name : ${listTableName}" th:value="${name}" th:text="${name}"></option>
                         <option value="other">Другое...</option>
                     </select>
-                    <input type="text" id="textInput" style="display:none;" placeholder="Hовая таблица"/>
+                    <input type="text" id="textInput" name="newTableName" style="display:none;" placeholder="Hовая таблица"/>
                 </div>
                 <div class="form-group mb-3">
-                    <select class="form-select form-select-sm mb-3" name="operation">
-                        <option selected>Выберите желаемую операцию с таблицей</option>
+                    <select id="operationSelect" class="form-select form-select-sm mb-3" name="operation"
+                            onchange="handleOperationSelection(this)">
+                        <option selected>Выберите операцию с таблицей</option>
                         <option value="create">Создать новую таблицу</option>
                         <option value="update">Изменить типы данных в существующей таблице</option>
                         <option value="delete">Удалить таблицу</option>
                     </select>
                 </div>
-
-                <form>
-                    <div class="row">
+                <div id="columnsContainer">
+                    <div class="row mb-3">
                         <div class="col">
-                            <input type="text" class="form-control" placeholder="Название колонки">
+                            <input type="text" class="form-control column-name" placeholder="Название колонки">
                         </div>
                         <div class="col">
-                            <input type="text" class="form-control" placeholder="Тип данных">
+                            <input type="text" class="form-control data-type" placeholder="Тип данных">
                         </div>
                     </div>
-                    <div class="col">
-                        <button onclick="addColumn()" class="btn btn-primary btn-lg w-100 mt-3">Добавить колонку</button>
-                    </div>
-                </form>
-
+                </div>
+                <div class="col" id="addColumnButton">
+                    <button type="button" onclick="addColumn()" class="btn btn-primary btn-lg w-100 mt-3">Добавить столбец</button>
+                </div>
                 <button type="submit" class="btn btn-primary btn-lg w-100 mt-3">Сгенерировать скрипт</button>
             </form>
         </div>
     </div>
 </div>
 
+<script>
+    function handleTableSelection(select) {
+        const textInput = document.getElementById('textInput');
+        const operationSelect = document.getElementById('operationSelect');
+        const updateOption = operationSelect.querySelector('option[value="update"]');
+        const deleteOption = operationSelect.querySelector('option[value="delete"]');
+        const createOption = operationSelect.querySelector('option[value="create"]');
+
+        if (select.value === 'other') {
+            textInput.style.display = 'block';
+            createOption.disabled = false;
+            updateOption.disabled = true;
+            deleteOption.disabled = true;
+        } else {
+            textInput.style.display = 'none';
+            createOption.disabled = true;
+            updateOption.disabled = false;
+            deleteOption.disabled = false;
+        }
+    }
+
+    function handleOperationSelection(select) {
+        const tableName = document.getElementById('selectBox').value;
+        const addColumnButton = document.getElementById('addColumnButton');
+        const columnFormField = document.getElementById('columnsContainer');
+
+        if (select.value === 'update' || select.value === 'delete') {
+            addColumnButton.style.display = 'none';
+            if(select.value === 'delete') {
+                columnFormField.style.display = 'none';
+            }
+        } else {
+            addColumnButton.style.display = 'block';
+        }
+
+        if (select.value === 'update' && tableName !== 'other') {
+            fetchColumnsData(tableName);
+        }
+    }
+
+    function fetchColumnsData(tableName) {
+        fetch(`/getColumnsData?tableName=${tableName}`)
+            .then(response => response.json())
+            .then(data => {
+                populateColumns(data);
+            })
+            .catch(error => console.error('Error fetching columns data:', error));
+    }
+
+    function populateColumns(data) {
+        const container = document.getElementById('columnsContainer');
+        container.innerHTML = ''; // Clear existing columns
+
+        for (const [columnName, dataType] of Object.entries(data)) {
+            const newRow = document.createElement('div');
+            newRow.className = 'row mb-3';
+            newRow.innerHTML = `
+                <div class="col">
+                    <input type="text" readonly="readonly" class="form-control column-name" value="${columnName}" placeholder="Название колонки">
+                </div>
+                <div class="col">
+                    <input type="text" class="form-control data-type" value="${dataType}" placeholder="Тип данных">
+                </div>
+            `;
+            container.appendChild(newRow);
+        }
+    }
+
+    function addColumn() {
+        const container = document.getElementById('columnsContainer');
+        const newRow = document.createElement('div');
+        newRow.className = 'row mb-3';
+        newRow.innerHTML = `
+            <div class="col">
+                <input type="text" class="form-control column-name" placeholder="Название колонки">
+            </div>
+            <div class="col">
+                <input type="text" class="form-control data-type" placeholder="Тип данных">
+            </div>
+        `;
+        container.appendChild(newRow);
+    }
+
+    function prepareData(event) {
+        event.preventDefault();
+        const columnNames = document.querySelectorAll('.column-name');
+        const dataTypes = document.querySelectorAll('.data-type');
+        const values = {};
+
+        columnNames.forEach((columnName, index) => {
+            const dataType = dataTypes[index].value;
+            if (columnName.value && dataType) {
+                values[columnName.value] = dataType;
+            }
+        });
+
+        const tableName = document.getElementById('selectBox').value;
+        const newTableName = document.getElementById('textInput').value;
+
+        const requestData = {
+            tableName: tableName === 'other' ? newTableName : tableName,
+            operation: document.getElementById('operationSelect').value,
+            values: values
+        };
+
+        fetch('/automation', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(requestData)
+        })
+            .then(response => response.json())
+            .then(data => {
+                // Обработка ответа сервера
+                console.log('Success:', data);
+                // Перенаправление на страницу результата или отображение сообщения
+                window.location.href = '/result'; // Пример перенаправления
+            })
+            .catch(error => console.error('Error:', error));
+    }
+</script>
 
 </body>
 </html>
