flyway не видит sql скриптов

--- a/architect_module/src/main/resources/templates/index.html
+++ b/architect_module/src/main/resources/templates/index.html
@@ -328,8 +328,7 @@
             .then(data => {
                 // Обработка ответа сервера
                 console.log('Success:', data);
-                // Перенаправление на страницу результата или отображение сообщения
-                window.location.href = '/result'; // Пример перенаправления
+                window.location.href = '/';
             })
             .catch(error => console.error('Error:', error));
     }
